--- a/features.html
+++ b/features.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="./css/all.css">
-    <link rel="stylesheet" href="./css/loruki.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/utilities.css">
     <title>Loruki | Cloud Hosting For Everyone</title>
 </head>
@@ -20,7 +20,7 @@
             <h1 class="logo">Loruki.</h1>
             <nav>
                 <ul>
-                    <li><a href="loruki.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="features.html">Features</a></li>
                     <li><a href="docs.html">Docs</a></li>
                 </ul>
@@ -92,7 +92,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="./loruki.html">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="./features.html">Features</a></li>
                     <li><a href="./docs.html">Docs</a></li>
                 </ul>
